APP-1497: Create update and get with mongoDB
